--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.pokerman99.chatcolors</groupId>
-    <artifactId>chatcolors</artifactId>
+    <artifactId>chatcolors-1.12</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -43,17 +43,17 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
-  		<repository>  
-    		<id>ultimatechat-repo</id>  
-    		<url>https://raw.github.com/FabioZumbi12/UltimateChat/mvn-repo/</url>  
-  		</repository>  
+        <repository>
+            <id>ultimatechat-repo</id>
+            <url>https://raw.github.com/FabioZumbi12/UltimateChat/mvn-repo/</url>
+        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>org.spongepowered</groupId>
             <artifactId>spongeapi</artifactId>
-            <version>5.2.0-SNAPSHOT</version>
+            <version>7.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -65,40 +65,14 @@
         <dependency>
             <groupId>me.lucko.luckperms</groupId>
             <artifactId>luckperms-api</artifactId>
-            <version>3.2</version>
+            <version>4.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>be.spyproof.nickname-manager</groupId>
-            <artifactId>nickname-manager</artifactId>
-            <version>1.0.1</version>
-            <scope>system</scope>
-            <systemPath>D:\plugins\nickname-manager-sponge-1.0.1c-jar-with-dependencies.jar</systemPath>
+            <groupId>br.net.fabiozumbi12.UltimateChat</groupId>
+            <artifactId>UltimateChat-Sponge-5.0-6.0</artifactId>
+            <version>1.8.6</version>
+            <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>com.pixelmonmod.pixelmon</groupId>
-            <artifactId>pixelmon</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>D:\plugins\PixelmonDark2.4.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>net.minecraft</groupId>
-            <artifactId>minecraft</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>D:\plugins\forge-1.10.2-12.18.3.2488-universal.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>com.github.rojo8399</groupId>
-            <artifactId>PlaceholderAPI</artifactId>
-            <version>v4.1</version>
-        </dependency>
-        <dependency>             
-        <groupId>br.net.fabiozumbi12.UltimateChat</groupId> 
-            <artifactId>UltimateChat-Sponge-5.0-6.0</artifactId> 
-            <version>1.8.4</version> 
-            <scope>provided</scope>  
-        </dependency> 
     </dependencies>
 </project>
